refactor(backend router): send only ID instead of DataResponse in all PUT and POST requests to avoid fetching useless data
