# Code/Server/controllers/furniture.go
@@ -17,13 +17,13 @@ import (
 //	@Tags			inventory
 //	@Accept			json
 //	@Produce		json
-//	@Param			property_id	path		string						true	"Property ID"
-//	@Param			room_id		path		string						true	"Room ID"
-//	@Param			furniture	body		models.FurnitureRequest		true	"Furniture data"
-//	@Success		201			{object}	models.FurnitureResponse	"Created furniture data"
-//	@Failure		400			{object}	utils.Error					"Missing fields"
-//	@Failure		403			{object}	utils.Error					"Property not yours"
-//	@Failure		409			{object}	utils.Error					"Furniture already exists"
+//	@Param			property_id	path		string					true	"Property ID"
+//	@Param			room_id		path		string					true	"Room ID"
+//	@Param			furniture	body		models.FurnitureRequest	true	"Furniture data"
+//	@Success		201			{object}	models.IdResponse		"Created furniture ID"
+//	@Failure		400			{object}	utils.Error				"Missing fields"
+//	@Failure		403			{object}	utils.Error				"Property not yours"
+//	@Failure		409			{object}	utils.Error				"Furniture already exists"
 //	@Failure		500
 //	@Security		Bearer
 //	@Router			/owner/properties/{property_id}/rooms/{room_id}/furnitures/ [post]
@@ -39,7 +39,7 @@ func CreateFurniture(c *gin.Context) {
 		utils.SendError(c, http.StatusConflict, utils.FurnitureAlreadyExists, nil)
 		return
 	}
-	c.JSON(http.StatusCreated, models.DbFurnitureToResponse(*furniture))
+	c.JSON(http.StatusCreated, models.IdResponse{ID: furniture.ID})
 }
 
 // GetFurnituresByRoom godoc
@@ -96,7 +96,7 @@ func GetFurniture(c *gin.Context) {
 //	@Param			room_id			path		string					true	"Room ID"
 //	@Param			furniture_id	path		string					true	"Furniture ID"
 //	@Param			archive			body		models.ArchiveRequest	true	"Archive status"
-//	@Success		200				{object}	models.PropertyResponse	"Toggled archive furniture data"
+//	@Success		200				{object}	models.IdResponse		"Updated furniture ID"
 //	@Failure		400				{object}	utils.Error				"Mising fields"
 //	@Failure		403				{object}	utils.Error				"Property not yours"
 //	@Failure		404				{object}	utils.Error				"Furniture not found"
@@ -111,5 +111,5 @@ func ArchiveFurniture(c *gin.Context) {
 	}
 
 	furniture := database.ToggleArchiveFurniture(c.Param("furniture_id"), req.Archive)
-	c.JSON(http.StatusOK, models.DbFurnitureToResponse(*furniture))
+	c.JSON(http.StatusOK, models.IdResponse{ID: furniture.ID})
 }
