# Code/Server/docs/swagger.json
@@ -46,9 +46,9 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created user data",
+                        "description": "Created user ID",
                         "schema": {
-                            "$ref": "#/definitions/models.UserResponse"
+                            "$ref": "#/definitions/models.IdResponse"
                         }
                     },
                     "400": {
@@ -101,9 +101,9 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created user data",
+                        "description": "Created user ID",
                         "schema": {
-                            "$ref": "#/definitions/models.UserResponse"
+                            "$ref": "#/definitions/models.IdResponse"
                         }
                     },
                     "400": {
@@ -1195,9 +1195,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Updated damage",
+                        "description": "Updated damage ID",
                         "schema": {
-                            "$ref": "#/definitions/models.DamageCreateResponse"
+                            "$ref": "#/definitions/models.IdResponse"
                         }
                     },
                     "400": {
@@ -1266,10 +1266,10 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "Fixed damage",
+                    "200": {
+                        "description": "Fixed damage ID",
                         "schema": {
-                            "$ref": "#/definitions/models.DamageResponse"
+                            "$ref": "#/definitions/models.IdResponse"
                         }
                     },
                     "400": {
@@ -1401,9 +1401,9 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Document uploaded",
+                        "description": "Created document ID",
                         "schema": {
-                            "$ref": "#/definitions/models.DocumentResponse"
+                            "$ref": "#/definitions/models.IdResponse"
                         }
                     },
                     "400": {
@@ -1980,9 +1980,9 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created room data",
+                        "description": "Created room ID",
                         "schema": {
-                            "$ref": "#/definitions/models.RoomResponse"
+                            "$ref": "#/definitions/models.IdResponse"
                         }
                     },
                     "400": {
@@ -2113,9 +2113,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Toggled archive room data",
+                        "description": "Updated room ID",
                         "schema": {
-                            "$ref": "#/definitions/models.PropertyResponse"
+                            "$ref": "#/definitions/models.IdResponse"
                         }
                     },
                     "400": {
@@ -2253,9 +2253,9 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created furniture data",
+                        "description": "Created furniture ID",
                         "schema": {
-                            "$ref": "#/definitions/models.FurnitureResponse"
+                            "$ref": "#/definitions/models.IdResponse"
                         }
                     },
                     "400": {
@@ -2400,9 +2400,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Toggled archive furniture data",
+                        "description": "Updated furniture ID",
                         "schema": {
-                            "$ref": "#/definitions/models.PropertyResponse"
+                            "$ref": "#/definitions/models.IdResponse"
                         }
                     },
                     "400": {
@@ -2972,13 +2972,13 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Damage created",
+                        "description": "Created damage ID",
                         "schema": {
-                            "$ref": "#/definitions/models.DamageResponse"
+                            "$ref": "#/definitions/models.IdResponse"
                         }
                     },
                     "400": {
-                        "description": "Missing fields",
+                        "description": "Missing fields or bad base64 string",
                         "schema": {
                             "$ref": "#/definitions/utils.Error"
                         }
@@ -3110,9 +3110,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Updated damage",
+                        "description": "Updated damage ID",
                         "schema": {
-                            "$ref": "#/definitions/models.DamageCreateResponse"
+                            "$ref": "#/definitions/models.IdResponse"
                         }
                     },
                     "400": {
@@ -3174,10 +3174,10 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "Fixed damage",
+                    "200": {
+                        "description": "Fixed damage ID",
                         "schema": {
-                            "$ref": "#/definitions/models.DamageResponse"
+                            "$ref": "#/definitions/models.IdResponse"
                         }
                     },
                     "400": {
@@ -3295,9 +3295,9 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Document uploaded",
+                        "description": "Created document ID",
                         "schema": {
-                            "$ref": "#/definitions/models.DocumentResponse"
+                            "$ref": "#/definitions/models.IdResponse"
                         }
                     },
                     "400": {
@@ -3945,53 +3945,6 @@
                 },
                 "type": {
                     "$ref": "#/definitions/db.ReportType"
-                }
-            }
-        },
-        "models.DamageCreateResponse": {
-            "type": "object",
-            "properties": {
-                "comment": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "error": {
-                    "type": "string"
-                },
-                "fix_planned_at": {
-                    "type": "string"
-                },
-                "fix_status": {
-                    "$ref": "#/definitions/db.FixStatus"
-                },
-                "fixed_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "lease_id": {
-                    "type": "string"
-                },
-                "priority": {
-                    "$ref": "#/definitions/db.Priority"
-                },
-                "read": {
-                    "type": "boolean"
-                },
-                "room_id": {
-                    "type": "string"
-                },
-                "room_name": {
-                    "type": "string"
-                },
-                "tenant_name": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
                 }
             }
         },
