# Code/Server/models/damage.go
@@ -78,52 +78,3 @@ func DbDamageToResponse(pc db.DamageModel) DamageResponse {
 	resp.FromDbDamage(pc)
 	return resp
 }
-
-type DamageCreateResponse struct {
-	ID         string `json:"id"`
-	LeaseID    string `json:"lease_id"`
-	TenantName string `json:"tenant_name"`
-	RoomID     string `json:"room_id"`
-	RoomName   string `json:"room_name"`
-
-	Comment      string       `json:"comment"`
-	Priority     db.Priority  `json:"priority"`
-	Read         bool         `json:"read"`
-	CreatedAt    db.DateTime  `json:"created_at"`
-	UpdatedAt    db.DateTime  `json:"updated_at"`
-	FixStatus    db.FixStatus `json:"fix_status"`
-	FixPlannedAt *db.DateTime `json:"fix_planned_at"`
-	FixedAt      *db.DateTime `json:"fixed_at,omitempty"`
-
-	Error string `json:"error,omitempty"`
-}
-
-func (i *DamageCreateResponse) FromDbDamage(model db.DamageModel, err error) {
-	i.ID = model.ID
-	i.LeaseID = model.LeaseID
-	i.TenantName = model.Lease().Tenant().Name()
-	i.RoomID = model.RoomID
-	i.RoomName = model.Room().Name
-
-	i.Comment = model.Comment
-	i.Priority = model.Priority
-	i.Read = model.Read
-	i.CreatedAt = model.CreatedAt
-	i.UpdatedAt = model.UpdatedAt
-
-	i.FixStatus = model.FixStatus()
-	i.FixPlannedAt = model.InnerDamage.FixPlannedAt
-	i.FixedAt = model.InnerDamage.FixedAt
-
-	if err != nil {
-		i.Error = err.Error()
-	} else {
-		i.Error = ""
-	}
-}
-
-func DbDamageToCreateResponse(pc db.DamageModel, err error) DamageCreateResponse {
-	var resp DamageCreateResponse
-	resp.FromDbDamage(pc, err)
-	return resp
-}
